--- a/index.html
+++ b/index.html
@@ -27,10 +27,89 @@
         </div>
         <div class="section-1">
           <h2>Iphone 16 Pro</h2>
-          <p>Hello box intelligence</p>
+          <p>Hello , Apple intelligence</p>
           <div class="buttons">
             <div class="learnbutton">Learn more</div>
             <div class="buybutton">Buy</div>
+          </div>
+        </div>
+        <div class="section-2">
+          <h2>Iphone 16 Pro</h2>
+          <p>Hello , Apple intelligence</p>
+          <div class="buttons">
+            <div class="learnbutton1">Learn more</div>
+            <div class="buybutton1">Buy</div>
+          </div>
+        </div>
+        <div class="section-3">
+          <div class="size">
+            <img src="./images/ipadair.png" alt="ipad-air-logo" />
+          </div>
+          <p>Two sizes. Faster chip. Does it all.</p>
+
+          <div class="buttons">
+            <div class="learnbutton">Learn more</div>
+            <div class="buybutton">Buy</div>
+          </div>
+          <div class="text1"><p>Hello, Apple Intelligence.</p></div>
+        </div>
+        <div class="section-4">
+          <div class="size">
+            <h2>Airpods 4</h2>
+            <p>
+              Iconic. Now supersonic. Available  with Active Noise
+              Cancellation.2
+            </p>
+          </div>
+          <div class="buttons">
+            <div class="learnbutton">Learn more</div>
+            <div class="buybutton">Buy</div>
+          </div>
+        </div>
+        <div class="section-5">
+          <div class="vektor">
+            <img src="./images/Vector.png" alt="Vektor" />
+            <h1>WATCH</h1>
+          </div>
+          <h2>SERIES 10</h2>
+          <p>Thinstant classic.</p>
+          <div class="buttons">
+            <div class="learnbutton">Learn more</div>
+            <div class="buybutton">Buy</div>
+          </div>
+        </div>
+        <div class="section-6">
+          <h2>MacBook Air</h2>
+          <p>Lean. Mean. M3 machine.</p>
+          <div class="buttons">
+            <div class="learnbutton">Learn more</div>
+            <div class="buybutton">Buy</div>
+          </div>
+        </div>
+        <div class="section-7">
+          <h1>Apple for Small Business</h1>
+          <p>Hardware, software, and expert help - all in one place.</p>
+          <div class="buttons">
+            <div class="learnbutton">Learn more</div>
+          </div>
+        </div>
+        <div class="section-8">
+          <h1>Carrier deals at Apple</h1>
+          <p>
+            Get up to $1000 in credit on a new iPhone. Trade-in may be required.
+          </p>
+          <div class="buttons">
+            <div class="findyourdeal">Find your deal</div>
+          </div>
+        </div>
+        <div class="section-9">
+          <div class="vektor">
+            <img src="./images/Vector.png" alt="Vektor" />
+            <h1>Trade In</h1>
+          </div>
+          <p>Get $180–$650 in credit when you trade in iPhone 12 or higher.4</p>
+          <div class="buttons">
+            <div class="findyourdeal">Find your deal</div>
           </div>
         </div>
       </div>
