--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple web site</title>
+    <title>Apple web application</title>
   </head>
   <link rel="stylesheet" href="style.css" />
   <body>
@@ -67,12 +67,14 @@
           </div>
         </div>
         <div class="section-5">
-          <div class="vektor">
-            <img src="./images/Vector.png" alt="Vektor" />
-            <h1>WATCH</h1>
+          <div class="text2">
+            <div class="vektor">
+              <img src="./images/Vector.png" alt="Vektor" />
+              <h1>WATCH</h1>
+            </div>
+            <h2>SERIES 10</h2>
+            <p>Thinstant classic.</p>
           </div>
-          <h2>SERIES 10</h2>
-          <p>Thinstant classic.</p>
           <div class="buttons">
             <div class="learnbutton">Learn more</div>
             <div class="buybutton">Buy</div>
@@ -87,32 +89,64 @@
           </div>
         </div>
         <div class="section-7">
-          <h1>Apple for Small Business</h1>
-          <p>Hardware, software, and expert help - all in one place.</p>
+          <div class="text2">
+            <h1>Apple for Small Business</h1>
+            <p>Hardware, software, and expert help - all in one place.</p>
+          </div>
           <div class="buttons">
             <div class="learnbutton">Learn more</div>
           </div>
         </div>
         <div class="section-8">
-          <h1>Carrier deals at Apple</h1>
-          <p>
-            Get up to $1000 in credit on a new iPhone. Trade-in may be required.
-          </p>
+          <div class="text2">
+            <h1>Carrier deals at Apple</h1>
+            <p>
+              Get up to $1000 in credit on a new iPhone. Trade-in may be
+              required.
+            </p>
+          </div>
           <div class="buttons">
             <div class="findyourdeal">Find your deal</div>
           </div>
         </div>
         <div class="section-9">
-          <div class="vektor">
+          <div class="text2">
             <img src="./images/Vector.png" alt="Vektor" />
+
             <h1>Trade In</h1>
           </div>
-          <p>Get $180–$650 in credit when you trade in iPhone 12 or higher.4</p>
-          <div class="buttons">
-            <div class="findyourdeal">Find your deal</div>
-          </div>
+         <div><p>Get $180–$650 in credit when you trade in iPhone 12 or higher.4</p>
+        
+        <div class="buttons">
+          <div class="getyourestimate">Get your estimate</div>
         </div>
       </div>
+        </div>
+      <div class="section-10"></div>
+
+      <div class="dots">
+        <div class="section-11 dotcolor"></div>
+        <div class="section-11 dotcolor1"></div>
+        <div class="section-11 dotcolor1"></div>
+        <div class="section-11 dotcolor1"></div>
+        <div class="section-11 dotcolor1"></div>
+        <div class="section-11 dotcolor1"></div>
+        <div class="section-11 dotcolor1"></div>
+        <div class="section-11 dotcolor1"></div>
+        <div class="section-11 dotcolor1"></div>
+        <div class="section-11 dotcolor"></div>
+      </div>
+      <div class="last-section">
+        <div>
+          <div class="section-12-1"></div>
+          <div><p>La Oficial</p></div>
+        </div>
+        <div>
+          <div class="section-12-2"></div>
+          <div><p>Travel-Friendly Workouts</p></div>
+        </div>
+      </div>
+      <div class="playbutton"></div>
     </div>
   </body>
 </html>
