--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           </div>
           <div class="text1"><p>Hello, Apple Intelligence.</p></div>
         </div>
+        <div class="grid-section">
         <div class="section-4">
           <div class="size">
             <h2>Airpods 4</h2>
@@ -122,7 +123,11 @@
         </div>
       </div>
         </div>
+        </div>
+        <div class="sectioning">
       <div class="section-10"></div>
+      <div class="section-10-1"></div>
+      </div>
 
       <div class="dots">
         <div class="section-11 dotcolor"></div>
